--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,14 @@
+Water v1.7.8 (Public beta) - 13.12.2015
+
+*Back-end:
+-
+
+*Front-end:
+-
+
+=== === === === === === === === === =
+
+
 Water v1.7.7 (Public beta) - 13.12.2015
 
 *Back-end:
